// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyEmail shallow renders correctly, with componentWillUpdate, componentDidUpdate, and componentWillUnmount, without email or email additional 1`] = `
<FormCodeVerifyEmail
  email=""
  emailAdditional=""
  formHeightBuffer={50}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyEmail shallow renders correctly, with email additional and no email 1`] = `
<FormCodeVerifyEmail
  email=""
  emailAdditional="test1@test.com"
  formHeightBuffer={50}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyEmail shallow renders correctly, with email and email additional 1`] = `
<FormCodeVerifyEmail
  email="test@test.com"
  emailAdditional="test1@test.com"
  formHeightBuffer={50}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyEmail shallow renders correctly, with email and no email additional 1`] = `
<FormCodeVerifyEmail
  email="test@test.com"
  emailAdditional=""
  formHeightBuffer={50}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  width={300}
/>
`;

exports[`Containers PageExternal FormArrayContainerCode Forms FormContainerCodeVerifyEmail shallow renders correctly, with loading indicator 1`] = `
<FormCodeVerifyEmail
  email=""
  emailAdditional=""
  formHeightBuffer={50}
  heightRef={[MockFunction]}
  inputHeightBuffer={15}
  width={300}
/>
`;
